src/objects/Post_Purchase_Opportunity__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Post Purchase Opportunity creation criteria.</description>
    <fields>
        <fullName>Base_Product_Name__c</fullName>
        <label>Base Product Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <label>Contact State</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Processing_Status__c</fullName>
        <label>Order Processing Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Volume__c</fullName>
        <description>Put values from 0 to 9.Value of 5 will include the orders ending in 0,1,2,3,4,5.
Value of 2 will include the orders ending in 0,1,2.</description>
        <label>Order Volume</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <description>Put the comma separated values of Verticals to be considered.Avoid spaces.If all verticals needs to be considered leave blank.</description>
        <label>Vertical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PostPurchaseOpportunity</label>
</CustomObject>